[package]
name = "trattoria-core"
version = "0.2.1"
authors = ["Guillem Ballesteros <dev+crate@maxwellrules.com>"]
description = "PyO3 wrapper for TTTR-Toolbox"
edition = "2018"
license = "MIT"
keywords = ["scientific-computing", "python", "science"]

[lib]
name = "trattoria_core"
crate-type = ["cdylib"]

[dependencies]
tttr-toolbox = "0.2.1"
numpy = "0.13"
ndarray = "0.14"

[profile.release]
lto="fat"
codegen-units = 1
debug = false
incremental = false

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[package.metadata.maturin]
requires-dist = ["numpy>=1.16"]
classifier = ["Programming Language :: Python", "Topic :: Scientific/Engineering", "Topic :: Scientific/Engineering :: Physics"]
