[package]
name = "trattoria-core"
version = "0.4.5"
authors = ["Guillem Ballesteros <dev+crate@maxwellrules.com>"]
description = "PyO3 wrapper for TTTR-Toolbox"
edition = "2018"
license = "MIT"
keywords = ["scientific-computing", "python", "science"]

[lib]
name = "trattoria_core"
crate-type = ["cdylib"]

[dependencies]
tttr-toolbox = "0.4.4"
# tttr-toolbox = { path = "../tttr-toolbox/tttr-toolbox" }
numpy = "0.19"
pyo3 = { version = "0.19", features = ["extension-module"]}
ndarray = "0.15.2"

[profile.release]
lto="fat"
codegen-units = 1
debug = false
incremental = false
