[tool.poetry]
name = "trattoria-core"
version = "0.4.2"
description = "The heart of the trattoria library."
authors = ["Guillem Ballesteros <dev+github@maxwellrules.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
numpy = ">=1.16"
maturin = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
