[tool.poetry]
name = "trattoria-core"
version = "0.4.4"
description = "The heart of the trattoria library."
authors = ["Guillem Ballesteros <dev+github@maxwellrules.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = ">=1.20"
maturin = "^1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[package.metadata.maturin]
requires-dist = ["numpy>=1.20"]
classifier = ["Programming Language :: Python", "Topic :: Scientific/Engineering", "Topic :: Scientific/Engineering :: Physics"]
